<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scr_three_name"
            android:id="@+id/scrThreeName" android:layout_gravity="center_horizontal"/>
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button"
                android:id="@+id/scrThreeButton" android:layout_gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scr_three_reversetext"
                android:id="@+id/scr_three_reversetext" android:layout_gravity="center_horizontal|bottom"
                android:gravity="center" android:paddingBottom="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrThreeText" android:layout_gravity="center_horizontal" android:paddingTop="20dp"
                android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scr_three_usernamereverse"
                android:id="@+id/scr_three_usernamereverse" android:layout_gravity="center_horizontal|bottom"/>
    </FrameLayout>
</LinearLayout>